remove the inline styles

--- a/html-css/week1/main.css
+++ b/html-css/week1/main.css
@@ -37,6 +37,10 @@ ul li {
     background-color: rgba(217, 222, 223, 0.53);
 }
 
+.information-item {
+    color: blue;
+}
+
 .date {
     color: cornflowerblue;
     font-size: 16px;
